gauss jordan added in notebook

--- a/notebook.tex
+++ b/notebook.tex
@@ -133,6 +133,8 @@
 	\lstinputlisting[language=C++]{comb.cpp}
 \subsection{FFT}
 	\lstinputlisting[language=C++]{fft.cpp}
+\subsection{Gauss Jordan}
+	\lstinputlisting[language=C++]{gauss-jordan.cpp}
 
 \section{Other}
 \subsection{Read Input}
