--- a/notebook.tex
+++ b/notebook.tex
@@ -93,6 +93,8 @@
 	\lstinputlisting[language=C++]{kruskal.cpp}
 \subsection{Eulerian Tour}
 	\lstinputlisting[language=C++]{eulerian-tour.cpp}
+\subsection{Topological Sort}
+	\lstinputlisting[language=C++]{topological-sort.cpp}
 
 \section{Geometry}
 \subsection{Geometry}
